--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ autopep8==1.3.5
 click==6.7
 colorama==0.3.9
 Flask==1.0.2
+Flask-SQLAlchemy==2.3.2
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -12,6 +13,7 @@ mccabe==0.6.1
 pycodestyle==2.4.0
 pylint==2.0.1
 six==1.11.0
+SQLAlchemy==1.2.10
 typed-ast==1.1.0
 Werkzeug==0.14.1
 wrapt==1.10.11
