--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,12 @@ astroid==2.0.1
 autopep8==1.3.5
 click==6.7
 colorama==0.3.9
+decorator==4.3.0
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+Flask-WTF==0.14.2
+infinity==1.4
+intervals==0.8.1
 isort==4.3.4
 itsdangerous==0.24
 Jinja2==2.10
@@ -14,6 +18,11 @@ pycodestyle==2.4.0
 pylint==2.0.1
 six==1.11.0
 SQLAlchemy==1.2.10
+SQLAlchemy-Utils==0.33.3
 typed-ast==1.1.0
+validators==0.12.2
 Werkzeug==0.14.1
 wrapt==1.10.11
+WTForms==2.2.1
+WTForms-Alchemy==0.16.7
+WTForms-Components==0.10.3
