--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==6.7
 colorama==0.3.9
 decorator==4.3.0
 Flask==1.0.2
+Flask-Login==0.4.1
 Flask-SQLAlchemy==2.3.2
 Flask-WTF==0.14.2
 infinity==1.4
