--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==6.7
 colorama==0.3.9
 decorator==4.3.0
 Flask==1.0.2
+-e git+https://github.com/wzuo/Flask-Images.git@master#egg=flask_images
 Flask-Login==0.4.1
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
@@ -19,6 +20,9 @@ Mako==1.0.7
 MarkupSafe==1.0
 mccabe==0.6.1
 mysqlclient==1.3.13
+PIL==1.1.7
+Pillow==5.2.0
+pillowcase==2.0.0
 pycodestyle==2.4.0
 pylint==2.0.1
 python-dateutil==2.7.3
