--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Migrate==2.2.1
 Flask-SQLAlchemy==2.3.2
+Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
 infinity==1.4
 intervals==0.8.1
