--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
 alembic==1.0.0
 astroid==2.0.1
 autopep8==1.3.5
+cffi==1.11.5
 click==6.7
 colorama==0.3.9
 decorator==4.3.0
 Flask==1.0.2
 Flask-Login==0.4.1
 Flask-Migrate==2.2.1
+Flask-Misaka==0.4.1
 Flask-SQLAlchemy==2.3.2
 Flask-Uploads==0.2.1
 Flask-WTF==0.14.2
@@ -19,8 +21,10 @@ lazy-object-proxy==1.3.1
 Mako==1.0.7
 MarkupSafe==1.0
 mccabe==0.6.1
+misaka==2.1.0
 mysqlclient==1.3.13
 pycodestyle==2.4.0
+pycparser==2.18
 pylint==2.0.1
 python-dateutil==2.7.3
 python-editor==1.0.3
